--- a/style/index.styl
+++ b/style/index.styl
@@ -1,3 +1,11 @@
+.post-stream
+    margin-top: 130px;
+
 .post
     .panel-default
         margin: 0px;
+        overflow: auto;
+.editor
+    margin: 0px;
+    width: 100%;
+    height: 130px;
