--- a/style/index.styl
+++ b/style/index.styl
@@ -1,11 +1,25 @@
-.post-stream
-    margin-top: 130px;
-
 .post
     .panel-default
         margin: 0px;
-        overflow: auto;
+
 .editor
     margin: 0px;
     width: 100%;
     height: 130px;
+    background: white;
+
+.post-stream
+    margin-top: 130px;
+
+.form-control
+    resize: none;
+
+.post-heading
+    background-color: rgba(52, 152, 219, 1)!important;
+    color: white!important;
+
+.post-body
+    background-color: white;
+
+.origin
+    float: right;
