--- a/style/index.styl
+++ b/style/index.styl
@@ -21,5 +21,16 @@
 .post-body
     background-color: white;
 
+.post-stream
+    margin: 0px;
+
 .origin
+    float: right;
+
+.plugins-list
+    width: auto;
+    overflow: hidden;
+
+.post-button
+    width: 70px;
     float: right;
