--- a/style/index.styl
+++ b/style/index.styl
@@ -3,9 +3,8 @@
         margin: 0px;
 
 .editor
-    margin: 0px;
     width: 100%;
-    height: 130px;
+    height: 120px;
     background: white;
 
 .form-control
@@ -20,15 +19,23 @@
 
 .post-stream
     margin: 0px;
-    margin-top: 130px;
+    margin-top: 120px;
 
 .origin
     float: right;
 
+.editor-actions-container
+    position: relative;
+
 .plugins-list
     width: auto;
     overflow: hidden;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 2px;
 
 .post-button
     width: 70px;
     float: right;
+    margin: 5px;
