added loading and analatics

--- a/style/index.styl
+++ b/style/index.styl
@@ -39,3 +39,13 @@
     width: 70px;
     float: right;
     margin: 5px;
+
+.loading
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
